--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ tensorflow-gpu = "==1.4.1"
 keras = "==2.1.2"
 distance = "*"
 scikit-learn = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.6"
